<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="apolloqr_app_name">ApolloQR</string>
    <string name="apolloqr_scan_label">QRScan</string>
    <string name="apolloqr_scan_text1">将二维码放入框内, 即可自动扫描</string>
    <string name="apolloqr_scan_text2">条码有风险, 扫描需谨慎</string>
    <string name="notice_system_notice">系统公告</string>
    <string name="notice_roll_notice">滚动公告</string>
    <string name="notice_action_settings">Settings</string>
    <string name="notice_btn_confirm">关闭</string>
    <string name="notice_btn_more">详情</string>
    <string name="notice_web_loading">加载中...</string>
    <string name="notice_web_failed">加载失败，点击重试</string>
    <string name="wx_qrcode_status_ready">使用微信扫一扫登录游戏</string>
    <string name="wx_qrcode_status_scanned">扫描成功</string>
    <string name="wx_qrcode_status_scanned_prompt">请在手机上确认登录</string>
    <string name="thrdcall_back">回到游戏</string>
    <string name="thrdcall_copy_sucsess">已复制到剪切板</string>
    <string name="thrdcall_sharepage_find_app_fail">程序未找到，请重新选择</string>
    <string name="thrdcall_confirm">确定</string>
    <string name="thrdcall_cancel">取消</string>
    <string name="thrdcall_image_viewer_save_failed">图片保存失败</string>
    <string name="thrdcall_share_to">分享到</string>
    <string name="thrdcall_share_more">以下调用手机软件分享</string>
    <string name="thrdcall_share">分享页面</string>
    <string name="thrdcall_fav">收藏页面</string>
    <string name="thrdcall_ss">发表说说</string>
    <string name="thrdcall_fitscreen">适应屏幕</string>
    <string name="thrdcall_copylink">复制链接地址</string>
    <string name="thrdcall_share_qq">分享到好友/群</string>
    <string name="thrdcall_openbrowser">浏览器打开</string>
    <string name="thrdcall_openqbx">QQ浏览器打开</string>
    <string name="thrdcall_save_pic_title">图片</string>
    <string name="thrdcall_save_pic_item">保存到手机</string>
    <string name="thrdcall_save_success">成功保存到相册</string>
    <string name="thrdcall_unfetch_url">未获取网页地址</string>
    <string name="thrdcall_menu_readmode">阅读器</string>
    <string name="thrdcall_menu_bookmark">存为浏览器书签</string>
    <string name="thrdcall_menu_fav">收藏</string>
    <string name="thrdcall_recom_mtt_title">下载QQ浏览器</string>
    <string name="thrdcall_recom_mtt_content">访问网络安全、极速、省流量</string>
    <string name="thrdcall_menu_saveflow">省流模式</string>
    <string name="msdk_more_shareToQzone">分享至空间</string>
    <string name="msdk_more_shareToWxFriend">分享至朋友圈</string>
    <string name="msdk_more_shareToQQ">分享至QQ</string>
    <string name="msdk_more_shareToWx">分享至微信</string>
    <string name="msdk_more_shareToQQ_url_too_long">分享的链接地址字段长度超过500，分享失败</string>
    <string name="msdk_upload_file_title">上传文件</string>
    <string name="msdk_uninstall_qq">检测到未安装手Q，请安装手Q后再分享！</string>
    <string name="msdk_uninstall_wx">检测到未安装微信，请安装微信后再分享！</string>
    <string name="msdk_untitle_share">无标题</string>
    <string name="white_list_dlg_title">温馨提示</string>
    <string name="white_list_dlg_body">您还没有天天飞车限量内测的资格，快去应用宝抢号吧！</string>
    <string name="white_list_title">你暂时没有体验资格</string>
    <string name="white_list_positive_redirect">立即抢号</string>
    <string name="white_list_positive_download">下载应用宝</string>
    <string name="white_list_positive_downloading">下载中</string>
    <string name="white_list_positive_update">更新应用宝</string>
    <string name="white_list_positive_install">安装应用宝</string>
    <string name="white_list_positive_continue">继续</string>
    <string name="white_list_positive_retry">重新下载</string>
    <string name="white_list_negtive">取消</string>
    <string name="white_list_download_fail">下载失败</string>
    <string name="white_list_submit">确定</string>
    <string name="white_list_network_not_connected">您未连接网络，请检查网络!</string>
    <string name="white_list_server_error">当前服务不可用，请稍后重试!</string>
    <string name="white_list_negtive_known">我知道了!</string>
    <string name="white_list_positive_retry_again">立即重试</string>
    <string name="white_list_network_error">网络异常，请稍后重试!</string>
    <string name="title_activity_pair">PairActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scanning">scanning for devices…</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="msdk_ad_pause_content">暂停游戏</string>
    <string name="msdk_ad_pause_header">暂停游戏</string>
    <string name="msdk_ad_pause_btn1_text">继续游戏</string>
    <string name="msdk_ad_pause_btn2_text">重新开始</string>
    <string name="msdk_ad_pause_btn3_text">终止闯关</string>
    <string name="msdk_ad_stop_header">退出游戏</string>
    <string name="msdk_ad_stop_content">退出游戏</string>
    <string name="msdk_ad_stop_btn1_text">取消退出</string>
    <string name="msdk_ad_stop_btn2_text">终止游戏</string>
    <string name="msdk_ad_stop_btn3_text">重新开始</string>
    <string name="msdk_name_auth_des1">"根据国家法律法规要求,
您的账号 %1$s 尚未实名注册,
将无法登录游戏。"</string>
    <string name="msdk_name_auth_des2">"*身份证信息只能提交一次不可修改，请慎重填写；
*我们承诺您的身份证信息仅用于实名注册，绝不会在其他任何场景使用！"</string>
    <string name="msdk_name_auth_name">点击输入姓名</string>
    <string name="msdk_name_auth_realname_title">腾讯游戏实名注册</string>
    <string name="msdk_name_auth_plat_qq">手Q</string>
    <string name="msdk_name_auth_plat_wx">微信</string>
    <string name="msdk_name_auth_identity_type">选择有效证件类型</string>
    <string name="msdk_name_auth_identity_num">点击输入有效证件号码</string>
    <string name="msdk_name_auth_province">选择省份</string>
    <string name="msdk_name_auth_city">市区</string>
    <string name="msdk_name_auth_back">返回登录界面</string>
    <string name="msdk_name_auth_commit">提交注册</string>
    <string name="msdk_name_auth_agreement_ok">同意</string>
    <string name="msdk_name_auth_sel_agreement">请勾选用户隐私和保护政策</string>
    <string name="msdk_name_auth_agreement">用户隐私和保护政策</string>
    <string name="msdk_name_auth_fail">注册失败</string>
    <string name="msdk_name_auth_success">注册成功</string>
    <string name="msdk_name_auth_success_des">"您的账号实名注册成功!
您现在可以登录游戏。"</string>
    <string name="msdk_name_auth_qq">联系客服</string>
    <string name="msdk_name_auth_tryagain">重新输入</string>
    <string name="msdk_name_auth_login">登录游戏</string>
    <string name="msdk_name_auth_agreement_url">http://game.qq.com/contract.shtml</string>
    <string name="msdk_name_auth_qq_url">https://kf.qq.com/touch/scene_faq.html?scene_id=kf1670</string>
    <string name="msdk_name_auth_progress_msg">提交中请稍后……</string>
    <string name="msdk_name_auth_tencent_agreement">用户隐私和保护政策</string>
    <string name="msdk_name_auth_check_name">请输入姓名/证件号</string>
    <string name="msdk_name_auth_check_identity_type">请选择证件类型</string>
    <string name="msdk_name_auth_check_identity">请输入姓名/证件号</string>
    <string name="MSDK_ENV_DEV_URL">https://adev.ssl.msdk.qq.com</string>
    <string name="MSDK_ENV_DEBUG_URL">https://adebug.ssl.msdk.qq.com</string>
    <string name="MSDK_ENV_TEST_URL">https://atest.ssl.msdk.qq.com</string>
    <string name="MSDK_ENV_RELEASE_URL">https://a.ssl.msdk.qq.com</string>
    <string name="msdk_open_lbs_tips">请在设置中开启定位权限</string>
    <string name="msdk_wxgameline">https://game.weixin.qq.com/cgi-bin/h5/static/circle/share_img.html</string>
    <string name="qmi_notify_dialog_title">使用提示</string>
    <string name="qmi_notify_dialog_text">开启悬浮窗后才能正常使用游戏助手功能，请到设置中打开：显示悬浮窗。</string>
    <string name="float_window_dialog_text">"使用该功能前，请进行如下设置：
进入安全中心—权限管理—通知—为王者荣耀开启悬浮窗。"</string>
    <string name="qmi_notify_dialog_check_text">不再提示</string>
    <string name="qmi_notify_dialog_ignore">忽略</string>
    <string name="qmi_notify_dialog_go">现在去开启</string>
    <string name="qmi_notify_dialog_text_v6">亲，因小米手机限制，助手需要完成以下操作后才能为您服务。</string>
    <string name="toast_notify_permission_failed">授权失败，请重新开启开关</string>
    <string name="tdm_AppId">1701879504</string>
    <string name="tdm_AppChannel">sgame_android</string>
    <string name="tdm_Protocol">TCP</string>
    <string name="app_name">王者荣耀前瞻版</string>
    <string name="__arcore_cancel">Cancel</string>
    <string name="__arcore_continue">Continue</string>
    <string name="__arcore_install_app">This application requires the latest version of ARCore.</string>
    <string name="__arcore_install_feature">This feature requires the latest version of ARCore.</string>
    <string name="__arcore_installing">Installing ARCore…</string>
</resources>
