<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/qmi_shape_alert_dialog_background" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="15.0sp" android:textColor="#ff333333" android:id="@id/notify_dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dp" android:text="@string/qmi_notify_dialog_title" />
    <View android:background="#66ff0000" android:layout_width="match_parent" android:layout_height="1.0dp" />
    <TextView android:textSize="18.0sp" android:textColor="#ff888888" android:layout_gravity="center_horizontal" android:id="@id/notify_dialog_context" android:layout_width="298.0dp" android:layout_height="wrap_content" android:layout_marginLeft="15.0dp" android:layout_marginTop="20.0dp" android:layout_marginRight="8.0dp" android:text="@string/qmi_notify_dialog_text" />
    <CheckBox android:textSize="12.0sp" android:textColor="#ff888888" android:gravity="center" android:id="@id/notify_dialog_checkBox" android:paddingLeft="25.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:layout_marginTop="15.0dp" android:button="@drawable/qim_notify_v6_checkbox" android:text="@string/qmi_notify_dialog_check_text" />
    <View android:background="@color/qmi_dialog_line_color1" android:layout_width="match_parent" android:layout_height="1.0dp" android:layout_marginTop="10.0dp" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textSize="20.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/notify_dialog_btn_ignore" android:background="@drawable/qmi_ic_close_dialog_selector" android:layout_width="match_parent" android:layout_height="55.0dp" android:text="@string/qmi_notify_dialog_ignore" android:layout_weight="1.0" />
        <View android:background="@color/qmi_dialog_line_color1" android:layout_width="1.0dp" android:layout_height="55.0dp" />
        <Button android:textSize="20.0sp" android:textColor="#ff980101" android:gravity="center" android:id="@id/notify_dialog_btn_go" android:background="@drawable/qmi_ic_close_dialog_selector" android:layout_width="match_parent" android:layout_height="55.0dp" android:text="@string/qmi_notify_dialog_go" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
