<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#fff5f5f5" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dp" android:textColor="#ffffffff" android:gravity="center" android:background="#ff13b7f6" android:layout_width="match_parent" android:layout_height="@dimen/msdk_name_auth_title_height" android:text="@string/msdk_name_auth_realname_title" />
    <ScrollView android:background="#fff5f5f5" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:background="#fff5f5f5" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="18.0dp" android:textStyle="bold" android:textColor="#ff28292d" android:gravity="center" android:id="@id/msdk_name_auth_id_des1" android:paddingLeft="15.0dp" android:paddingTop="@dimen/msdk_name_auth_text_top" android:paddingRight="15.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/msdk_name_auth_des1" />
            <TextView android:textSize="15.0dp" android:textColor="#ff47494c" android:paddingLeft="15.0dp" android:paddingTop="@dimen/msdk_name_auth_text_top" android:paddingRight="15.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/msdk_name_auth_des2" />
            <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/msdk_name_auth_edit_height" android:layout_marginLeft="50.0dp" android:layout_marginTop="@dimen/msdk_name_auth_edit_top" android:layout_marginRight="50.0dp">
                <EditText android:textSize="17.0dp" android:textColor="#ff343539" android:textColorHint="#ffd6d6d6" android:gravity="center" android:id="@id/msdk_name_auth_id_name" android:background="@drawable/msdk_name_auth_item_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/msdk_name_auth_name" android:singleLine="true" android:maxLength="40" />
                <ImageView android:id="@id/msdk_name_auth_id_name_must" android:layout_width="25.0dp" android:layout_height="25.0dp" android:layout_marginRight="15.0dp" android:src="@drawable/msdk_name_auth_must" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/msdk_name_auth_edit_height" android:layout_marginLeft="50.0dp" android:layout_marginTop="@dimen/msdk_name_auth_edit_margin" android:layout_marginRight="50.0dp">
                <TextView android:textSize="17.0dp" android:textColor="#ff343539" android:textColorHint="#ffd6d6d6" android:gravity="center" android:id="@id/msdk_name_auth_id_identity_type" android:background="@drawable/msdk_name_auth_item_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/msdk_name_auth_identity_type" />
                <ImageView android:id="@id/msdk_name_auth_id_identity_type_must" android:layout_width="25.0dp" android:layout_height="25.0dp" android:layout_marginRight="15.0dp" android:src="@drawable/msdk_name_auth_must" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/msdk_name_auth_edit_height" android:layout_marginLeft="50.0dp" android:layout_marginTop="@dimen/msdk_name_auth_edit_margin" android:layout_marginRight="50.0dp">
                <EditText android:textSize="17.0dp" android:textColor="#ff343539" android:textColorHint="#ffd6d6d6" android:gravity="center" android:id="@id/msdk_name_auth_id_identity_num" android:background="@drawable/msdk_name_auth_item_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/msdk_name_auth_identity_num" android:singleLine="true" android:maxLength="200" />
                <ImageView android:id="@id/msdk_name_auth_id_identity_num_must" android:layout_width="25.0dp" android:layout_height="25.0dp" android:layout_marginRight="15.0dp" android:src="@drawable/msdk_name_auth_must" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/msdk_name_auth_edit_height" android:layout_marginLeft="50.0dp" android:layout_marginTop="@dimen/msdk_name_auth_edit_margin" android:layout_marginRight="50.0dp">
                <TextView android:textSize="17.0dp" android:textColor="#ff343539" android:textColorHint="#ffd6d6d6" android:gravity="center" android:id="@id/msdk_name_auth_id_province" android:background="@drawable/msdk_name_auth_item_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/msdk_name_auth_province" />
                <ImageView android:id="@id/msdk_name_auth_id_province_must" android:visibility="gone" android:layout_width="25.0dp" android:layout_height="25.0dp" android:layout_marginRight="15.0dp" android:src="@drawable/msdk_name_auth_must" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <RelativeLayout android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/msdk_name_auth_edit_height" android:layout_marginLeft="50.0dp" android:layout_marginTop="@dimen/msdk_name_auth_edit_margin" android:layout_marginRight="50.0dp">
                <EditText android:textSize="17.0dp" android:textColor="#ff343539" android:textColorHint="#ffd6d6d6" android:gravity="center" android:id="@id/msdk_name_auth_id_city" android:background="@drawable/msdk_name_auth_item_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/msdk_name_auth_city" android:singleLine="true" android:maxLength="200" />
                <ImageView android:visibility="gone" android:layout_width="25.0dp" android:layout_height="25.0dp" android:layout_marginRight="15.0dp" android:src="@drawable/msdk_name_auth_must" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/msdk_name_auth_check_box_top" android:layout_marginBottom="@dimen/msdk_name_auth_check_box_Bottom">
                <CheckBox android:id="@id/msdk_name_auth_id_check_box" android:background="@drawable/msdk_name_auth_checkbox_style" android:layout_width="18.0dp" android:layout_height="18.0dp" android:checked="false" android:button="@null" />
                <TextView android:textSize="12.0dp" android:textColor="#ff888f99" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dp" android:text="@string/msdk_name_auth_agreement_ok" />
                <TextView android:textSize="12.0dp" android:textColor="#ff3399eb" android:id="@id/msdk_name_auth_id_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dp" android:text="@string/msdk_name_auth_agreement" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/msdk_name_auth_edit_height" android:layout_marginLeft="50.0dp" android:layout_marginRight="50.0dp" android:layout_marginBottom="@dimen/msdk_name_auth_button_top">
                <Button android:textSize="17.0dp" android:textColor="@drawable/msdk_name_auth_btn_text_frame_color" android:id="@id/msdk_name_auth_id_back" android:background="@drawable/msdk_name_auth_btn_frame_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginRight="5.0dp" android:text="@string/msdk_name_auth_back" android:layout_weight="1.0" />
                <Button android:textSize="17.0dp" android:textColor="@drawable/msdk_name_auth_btn_text_color" android:id="@id/msdk_name_auth_id_commit" android:background="@drawable/msdk_name_auth_btn_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="5.0dp" android:text="@string/msdk_name_auth_commit" android:singleLine="true" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
