<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:paddingTop="0.0dp" android:paddingRight="9.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/msdk_name_auth_id_close" android:paddingLeft="5.0dp" android:paddingTop="15.0dp" android:paddingRight="5.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/msdk_name_auth_btn_close" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dp">
            <ImageView android:id="@id/msdk_name_auth_id_img_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/msdk_name_auth_success" android:layout_alignParentRight="true" />
            <TextView android:textSize="18.0dp" android:textStyle="bold" android:textColor="#ff2d2d2e" android:id="@id/msdk_name_auth_id_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="7.0dp" android:text="@string/msdk_name_auth_success" />
            <TextView android:textSize="12.0dp" android:textColor="#ff545659" android:id="@id/msdk_name_auth_id_tips_des" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dp" android:text="@string/msdk_name_auth_success_des" />
            <TextView android:textSize="16.0dp" android:textColor="#ff61acf1" android:id="@id/msdk_name_auth_id_tips_qq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dp" android:text="@string/msdk_name_auth_qq" />
        </LinearLayout>
        <Button android:textSize="18.0dp" android:id="@id/msdk_name_auth_id_confirm" android:background="#ff3997ee" android:layout_width="match_parent" android:layout_height="55.0dp" android:layout_marginTop="20.0dp" android:text="@string/msdk_name_auth_login" />
    </LinearLayout>
</ScrollView>
